User insert fixed
